<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.widget.MainActivity">
    <group
        android:id="@+id/ss"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_news"
            android:icon="@drawable/ic_assessment_white_24dp"
            android:checked="true"
            android:title="@string/navigation_news" />
        <item
            android:id="@+id/navigation_item_social"
            android:icon="@drawable/ic_social_white_24dp"
            android:title="@string/navigation_social" />
        <item
            android:id="@+id/navigation_item_friend"
            android:icon="@drawable/icon_group_detail"
            android:title="@string/navigation_friend" />
        <item
            android:id="@+id/navigation_item_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/navigation_search" />
        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_portrait_white_24dp"
            android:title="@string/navigation_about" />
        <item
            android:id="@+id/navigation_item_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/navigation_setting" />
    </group>
</menu>